--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,8 @@
 
 .form{
   display: table-caption;
+  height: 100%;
+  padding: 2rem;
 }
 
 table {
@@ -137,12 +139,14 @@ form button:hover{
   color: black;
 }
 
-div {
-  border-radius: 5px;
-  background-color: #f2f2f2;
-}
+
 
 form p{
   color: red;
-  font-size: 10px;
+  font-size: 12px;
+}
+
+form p.succeful{
+  color: green;
+  font-size: 12px;
 }
